# ap-empty-directory

./: .gitignore  MANIFEST.in  Makefile  README.md  TEST_PLAN.md  pyproject.toml
.github/workflows/: coverage.yml  format.yml
ap_empty_directory/: __init__.py  __main__.py  cli.py  empty.py
tests/: test_cli.py  test_empty.py
